c/grammar.output
Terminals unused in grammar

    _EOL


Grammar

    0 $accept: start $end

    1 start: doc

    2 doc: sum
    3    | sum _EQ sum

    4 sum: %empty
    5    | term
    6    | sum _ADD term
    7    | sum _MINUS term

    8 term: product
    9     | term _DIV product

   10 product: factor
   11        | product factor
   12        | product _TIMES factor
   13        | product _CDOT factor

   14 factor: atom
   15       | atom _SUP atom
   16       | atom _SUB atom
   17       | _FRAC atom atom

   18 atom: NUM
   19     | VAR
   20     | _L_BRACE sum _R_BRACE
   21     | _STAR _L_BRACE VAR _R_BRACE
   22     | _SQRT atom
   23     | _L_PARENTHESIS sum _R_PARENTHESIS
   24     | _L_BRACKET sum _R_BRACKET
   25     | _L_BAR sum _R_BAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _EOL (258)
    NUM <nd> (259) 18
    VAR <nd> (260) 19 21
    _EQ (261) 3
    _ADD (262) 6
    _MINUS (263) 7
    _DIV (264) 9
    _SUP (265) 15
    _SUB (266) 16
    _TIMES (267) 12
    _CDOT (268) 13
    _STAR (269) 21
    _SQRT (270) 22
    _NULL_REDUCE (271)
    _FRAC (272) 17
    _L_BRACE (273) 20 21
    _R_BRACE (274) 20 21
    _L_PARENTHESIS (275) 23
    _R_PARENTHESIS (276) 23
    _L_BRACKET (277) 24
    _R_BRACKET (278) 24
    _L_BAR (279) 25
    _R_BAR (280) 25


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    start (27)
        on left: 1
        on right: 0
    doc <nd> (28)
        on left: 2 3
        on right: 1
    sum <nd> (29)
        on left: 4 5 6 7
        on right: 2 3 6 7 20 23 24 25
    term <nd> (30)
        on left: 8 9
        on right: 5 6 7 9
    product <nd> (31)
        on left: 10 11 12 13
        on right: 8 9 11 12 13
    factor <nd> (32)
        on left: 14 15 16 17
        on right: 10 11 12 13
    atom <nd> (33)
        on left: 18 19 20 21 22 23 24 25
        on right: 14 15 16 17 22


State 0

    0 $accept: . start $end
    1 start: . doc
    2 doc: . sum
    3    | . sum _EQ sum
    4 sum: . %empty
    5    | . term
    6    | . sum _ADD term
    7    | . sum _MINUS term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 4 (sum)

    start    go to state 10
    doc      go to state 11
    sum      go to state 12
    term     go to state 13
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 1

   18 atom: NUM .

    $default  reduce using rule 18 (atom)


State 2

   19 atom: VAR .

    $default  reduce using rule 19 (atom)


State 3

   21 atom: _STAR . _L_BRACE VAR _R_BRACE

    _L_BRACE  shift, and go to state 17


State 4

   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   22     | _SQRT . atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    atom  go to state 18


State 5

   17 factor: _FRAC . atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    atom  go to state 19


State 6

    4 sum: . %empty
    5    | . term
    6    | . sum _ADD term
    7    | . sum _MINUS term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   20     | _L_BRACE . sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 4 (sum)

    sum      go to state 20
    term     go to state 13
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 7

    4 sum: . %empty
    5    | . term
    6    | . sum _ADD term
    7    | . sum _MINUS term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   23     | _L_PARENTHESIS . sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 4 (sum)

    sum      go to state 21
    term     go to state 13
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 8

    4 sum: . %empty
    5    | . term
    6    | . sum _ADD term
    7    | . sum _MINUS term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   24     | _L_BRACKET . sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 4 (sum)

    sum      go to state 22
    term     go to state 13
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 9

    4 sum: . %empty
    5    | . term
    6    | . sum _ADD term
    7    | . sum _MINUS term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR
   25     | _L_BAR . sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 4 (sum)

    sum      go to state 23
    term     go to state 13
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 10

    0 $accept: start . $end

    $end  shift, and go to state 24


State 11

    1 start: doc .

    $default  reduce using rule 1 (start)


State 12

    2 doc: sum .
    3    | sum . _EQ sum
    6 sum: sum . _ADD term
    7    | sum . _MINUS term

    _EQ     shift, and go to state 25
    _ADD    shift, and go to state 26
    _MINUS  shift, and go to state 27

    $default  reduce using rule 2 (doc)


State 13

    5 sum: term .
    9 term: term . _DIV product

    _DIV  shift, and go to state 28

    $default  reduce using rule 5 (sum)


State 14

    8 term: product .
   11 product: product . factor
   12        | product . _TIMES factor
   13        | product . _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _TIMES          shift, and go to state 29
    _CDOT           shift, and go to state 30
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 8 (term)

    factor  go to state 31
    atom    go to state 16


State 15

   10 product: factor .

    $default  reduce using rule 10 (product)


State 16

   14 factor: atom .
   15       | atom . _SUP atom
   16       | atom . _SUB atom

    _SUP  shift, and go to state 32
    _SUB  shift, and go to state 33

    $default  reduce using rule 14 (factor)


State 17

   21 atom: _STAR _L_BRACE . VAR _R_BRACE

    VAR  shift, and go to state 34


State 18

   22 atom: _SQRT atom .

    $default  reduce using rule 22 (atom)


State 19

   17 factor: _FRAC atom . atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    atom  go to state 35


State 20

    6 sum: sum . _ADD term
    7    | sum . _MINUS term
   20 atom: _L_BRACE sum . _R_BRACE

    _ADD      shift, and go to state 26
    _MINUS    shift, and go to state 27
    _R_BRACE  shift, and go to state 36


State 21

    6 sum: sum . _ADD term
    7    | sum . _MINUS term
   23 atom: _L_PARENTHESIS sum . _R_PARENTHESIS

    _ADD            shift, and go to state 26
    _MINUS          shift, and go to state 27
    _R_PARENTHESIS  shift, and go to state 37


State 22

    6 sum: sum . _ADD term
    7    | sum . _MINUS term
   24 atom: _L_BRACKET sum . _R_BRACKET

    _ADD        shift, and go to state 26
    _MINUS      shift, and go to state 27
    _R_BRACKET  shift, and go to state 38


State 23

    6 sum: sum . _ADD term
    7    | sum . _MINUS term
   25 atom: _L_BAR sum . _R_BAR

    _ADD    shift, and go to state 26
    _MINUS  shift, and go to state 27
    _R_BAR  shift, and go to state 39


State 24

    0 $accept: start $end .

    $default  accept


State 25

    3 doc: sum _EQ . sum
    4 sum: . %empty
    5    | . term
    6    | . sum _ADD term
    7    | . sum _MINUS term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 4 (sum)

    sum      go to state 40
    term     go to state 13
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 26

    6 sum: sum _ADD . term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    term     go to state 41
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 27

    7 sum: sum _MINUS . term
    8 term: . product
    9     | . term _DIV product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    term     go to state 42
    product  go to state 14
    factor   go to state 15
    atom     go to state 16


State 28

    9 term: term _DIV . product
   10 product: . factor
   11        | . product factor
   12        | . product _TIMES factor
   13        | . product _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    product  go to state 43
    factor   go to state 15
    atom     go to state 16


State 29

   12 product: product _TIMES . factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    factor  go to state 44
    atom    go to state 16


State 30

   13 product: product _CDOT . factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    factor  go to state 45
    atom    go to state 16


State 31

   11 product: product factor .

    $default  reduce using rule 11 (product)


State 32

   15 factor: atom _SUP . atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    atom  go to state 46


State 33

   16 factor: atom _SUB . atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    atom  go to state 47


State 34

   21 atom: _STAR _L_BRACE VAR . _R_BRACE

    _R_BRACE  shift, and go to state 48


State 35

   17 factor: _FRAC atom atom .

    $default  reduce using rule 17 (factor)


State 36

   20 atom: _L_BRACE sum _R_BRACE .

    $default  reduce using rule 20 (atom)


State 37

   23 atom: _L_PARENTHESIS sum _R_PARENTHESIS .

    $default  reduce using rule 23 (atom)


State 38

   24 atom: _L_BRACKET sum _R_BRACKET .

    $default  reduce using rule 24 (atom)


State 39

   25 atom: _L_BAR sum _R_BAR .

    $default  reduce using rule 25 (atom)


State 40

    3 doc: sum _EQ sum .
    6 sum: sum . _ADD term
    7    | sum . _MINUS term

    _ADD    shift, and go to state 26
    _MINUS  shift, and go to state 27

    $default  reduce using rule 3 (doc)


State 41

    6 sum: sum _ADD term .
    9 term: term . _DIV product

    _DIV  shift, and go to state 28

    $default  reduce using rule 6 (sum)


State 42

    7 sum: sum _MINUS term .
    9 term: term . _DIV product

    _DIV  shift, and go to state 28

    $default  reduce using rule 7 (sum)


State 43

    9 term: term _DIV product .
   11 product: product . factor
   12        | product . _TIMES factor
   13        | product . _CDOT factor
   14 factor: . atom
   15       | . atom _SUP atom
   16       | . atom _SUB atom
   17       | . _FRAC atom atom
   18 atom: . NUM
   19     | . VAR
   20     | . _L_BRACE sum _R_BRACE
   21     | . _STAR _L_BRACE VAR _R_BRACE
   22     | . _SQRT atom
   23     | . _L_PARENTHESIS sum _R_PARENTHESIS
   24     | . _L_BRACKET sum _R_BRACKET
   25     | . _L_BAR sum _R_BAR

    NUM             shift, and go to state 1
    VAR             shift, and go to state 2
    _TIMES          shift, and go to state 29
    _CDOT           shift, and go to state 30
    _STAR           shift, and go to state 3
    _SQRT           shift, and go to state 4
    _FRAC           shift, and go to state 5
    _L_BRACE        shift, and go to state 6
    _L_PARENTHESIS  shift, and go to state 7
    _L_BRACKET      shift, and go to state 8
    _L_BAR          shift, and go to state 9

    $default  reduce using rule 9 (term)

    factor  go to state 31
    atom    go to state 16


State 44

   12 product: product _TIMES factor .

    $default  reduce using rule 12 (product)


State 45

   13 product: product _CDOT factor .

    $default  reduce using rule 13 (product)


State 46

   15 factor: atom _SUP atom .

    $default  reduce using rule 15 (factor)


State 47

   16 factor: atom _SUB atom .

    $default  reduce using rule 16 (factor)


State 48

   21 atom: _STAR _L_BRACE VAR _R_BRACE .

    $default  reduce using rule 21 (atom)
